alignment-issues

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -67,8 +67,9 @@
 }
 
 .logo-circle {
-  width: 40px;
-  height: 40px;
+  margin-top: 5px;
+  width: 80px;
+  height: 80px;
   border-radius: 50%;
   background-color: var(--logo-blue); /* Outer blue ring/circle */
   display: flex;
